<resources>
    <string name="app_name">The Guessing Game</string>
    <string name="ExitButton">EXIT</string>
    <string name="PlayButton">PLAY</string>
    <string name="Title">THE GUESSING GAME</string>
    <string name="NormalButton">NORMAL</string>
    <string name="HardButton">HARD</string>
    <string name="Difficulty">Choose A Difficulty:</string>
    <string name="HintHeader">HINT:</string>
    <string name="NoButton">NO</string>
    <string name="YesButton">YES</string>
    <string name="GiveHighScore">Your High Score Is: </string>
    <string name="EnterButton">Enter</string>
    <string name="EnterInput" />
    <string name="EnterText">Please Enter Your Name</string>
    <string name="textView2">Please input a number</string>
</resources>
